Fixed horizontal scroll on about page

--- a/src/style.css
+++ b/src/style.css
@@ -142,6 +142,7 @@ button:hover {
 .about {
   display: block;
   margin: 50px auto 0;
+  max-width: 90vw;
 }
 
 .abstract {
@@ -150,7 +151,7 @@ button:hover {
 }
 
 .my-story {
-  width: 100%;
+  max-width: 100vw;
   background-color: var(--white);
   text-align: center;
   padding: 80px 0 0px;
